@@ -36,9 +36,14 @@ JAVA_OPTS="
   -XX:GuaranteedSafepointInterval=0
   -XX:+UseNUMA
   --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+  --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
   --add-opens=java.base/java.lang=ALL-UNNAMED
+  --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+  --add-opens=java.base/java.io=ALL-UNNAMED
+  --add-opens=java.base/java.util=ALL-UNNAMED
   --add-opens=java.base/java.nio=ALL-UNNAMED
   --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+  --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
   -Dcom.sun.management.jmxremote
   -Dcom.sun.management.jmxremote.port=9010
   -Dcom.sun.management.jmxremote.authenticate=false
